--- a/css/index.css
+++ b/css/index.css
@@ -2,9 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Satisfy&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Sansita+Swashed&display=swap');
 /* This comment was created for Mark he is a good guy I like him*/
-html, body {
-    margin: 0;
-    height: 100%;
+*{
+    margin:0;
+    width:auto ;
+    height: auto;
 }
 nav img{
 
@@ -45,14 +46,14 @@ a {
 header img{
    width: 100%;
 }
-    section h1{
+    #welcome h1{
      display: flex;
     width: 1000px;
     height: 140px;
     flex-direction: column;
     justify-content: center;
 }
-    section h1 {
+    #welcome h1 {
     color: #000;
     text-align: center;
     font-family: 'Satisfy', cursive;
@@ -60,13 +61,16 @@ header img{
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    margin-top:20px;
+    margin-left:100px;
 }
-    section p{
+    #welcome p{
     text-align: center;
     font-size: 30px;
     font-style: normal;
     line-height: normal;
     font-family: 'Roboto Condensed', sans-serif;
+    margin-left:100px;
 
 }
     section p{
@@ -79,8 +83,9 @@ header img{
 section{
     margin-left:200px
 }
-#backgroundimg{
-    width:100px ;
+#backg img{
+width: 1519.5px;
+margin-left:-200px;
 }
 aside{
     display: inline-flex;
@@ -98,12 +103,13 @@ aside h1{
     font-size: 80px;
     font-weight: 400;
     float:center ;
-    margin-left:360px;
+    margin-left:400px;
 }
     #marktal img{
     width: 500px;
     height: 399px;
-    margin-top:-90px
+    margin-top:-50px;
+    margin-left:30px;
 }
     #marktal p{
     width: 860px;
@@ -113,8 +119,8 @@ aside h1{
     font-weight: 400;
     float:right;
     text-align:left ;
-    margin-top:-20px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-right:20px;
 }
 #marktal h1{
     color: #000;
@@ -128,21 +134,24 @@ aside h1{
 
 }
 #zoo2 {
-    width:1480px;
+    width:1519px;
     height:500px;
     background: #B7E3DF;
-    margin-left:-100px;
+    margin-left:-1px;
 }
 #zoo2 h1{
  float:left;
  margin-top:-10px;
  font-family: Sansita Swashed;
+ font-size:60px ;
+ margin-left:250px;
+
 }
 #zoo2 img{
     width: 500px;
     height: 400px;
     float:right;
-    margin-top:-100px;
+    padding-top:60px ;
 }
     #zoo2 p {
     width:800px ;
@@ -151,23 +160,25 @@ aside h1{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 40px;
     font-weight: 400;
+    padding-top:80px ;
+
 }
 #main3 img{
-    width: 500px;
-    height: 399px;
-    margin-top:-120px;
+    width: 600px;
+    height: 500px;
     margin-left:-180px;
 }
     #main3 p{
-    width: 850px;
+    width: 750px;
     color: #000;
-    font-size: 30px;
+    font-size: 35px;
     font-style: normal;
     font-weight: 400;
     float:right;
     text-align:left ;
-    margin-top:-20px;
+    margin-top:100px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding-right:100px ;
 }
 #main3 h1{
     color: #000;
@@ -177,12 +188,12 @@ aside h1{
     font-style: normal;
     font-weight: 400;
     margin-left:200px;
-    margin-top:-5px;
+    padding-top:50px ;
 
 }
 footer {
     background-color: #B7E3DF;
-    width: 1380px;
+    width: 1519px;
     height:460px;
 }
 
@@ -194,13 +205,15 @@ footer {
     align-items: flex-start;
     align-items: center;
     margin-left:-1100px;
+    font-size: 40px;
 }
 #image{
     float:right;
     margin-top:-319px;
 } 
 footer p {
-    font-size:20px ;
-    margin-left:-620px;
+    font-size:25px ;
+    margin-left:-300px;
     margin-top:-260px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
