--- a/css/food.css
+++ b/css/food.css
@@ -165,3 +165,33 @@ aside h1{
         line-height: 0.001em;
 
 }
+footer {
+    background-color: #B7E3DF;
+    width: 1519px;
+    height:460px;
+    margin-top:1200px;
+    margin-left:-10px;
+}
+
+#icons{
+    color:white;
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    align-items: center;
+    margin-left:-1100px;
+    font-size: 40px;
+    position: relative;
+    top:-310px;
+}
+#image{
+    float:right;
+    margin-top:-655px;
+} 
+footer p {
+    font-size:25px ;
+    margin-left:-300px;
+    margin-top:-100px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
