--- a/css/index.css
+++ b/css/index.css
@@ -23,6 +23,9 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border:2px;
+    border-color:black;
+    border-style: solid;
 }
 .nav li {
     margin-right: 20px; 
@@ -63,6 +66,7 @@ header img{
     line-height: normal;
     margin-top:20px;
     margin-left:100px;
+    word-spacing: normal
 }
     #welcome p{
     text-align: center;
@@ -71,6 +75,7 @@ header img{
     line-height: normal;
     font-family: 'Roboto Condensed', sans-serif;
     margin-left:100px;
+    word-spacing: normal
 
 }
     section p{
@@ -94,6 +99,7 @@ aside{
     background: #B7E3DF;
     width: 100%;
     margin-top:-10px ;
+    letter-spacing: 2px
 }
 
 aside h1{
