--- a/css/food.css
+++ b/css/food.css
@@ -5,6 +5,66 @@
     width: auto;
     height: auto;
 }
+/* Your existing styles here */
+
+/* Responsive styles for screens smaller than 768px */
+@media only screen and (max-width: 768px) {
+    nav img {
+        width: 150px;
+        height: 30px;
+    }
+
+    .nav li {
+        margin-right: 10px;
+        padding-right: 10px;
+    }
+
+    a {
+        font-size: 30px;
+    }
+
+    aside h1 {
+        font-size: 60px;
+        margin-left: 300px;
+    }
+
+    #art1 h1 {
+        font-size: 30px;
+        padding-left: 300px;
+    }
+
+    /* Add more responsive styles as needed */
+}
+
+/* Responsive styles for screens smaller than 480px */
+@media only screen and (max-width: 480px) {
+    nav img {
+        width: 120px;
+        height: 24px;
+    }
+
+    .nav li {
+        margin-right: 5px;
+        padding-right: 5px;
+    }
+
+    a {
+        font-size: 20px;
+    }
+
+    aside h1 {
+        font-size: 40px;
+        margin-left: 200px;
+    }
+
+    #art1 h1 {
+        font-size: 20px;
+        padding-left: 200px;
+    }
+
+    /* Add more responsive styles as needed */
+}
+
 nav img{
 
     width: 250px;
@@ -31,36 +91,40 @@ a {
     text-decoration: none;
     color: black;
     font-family: 'Satisfy', cursive;
-    font-size:40px ;
-    
+    font-size: 40px;
+}
+
+a:hover {
+    color: #B7E3DF;
+}
+
+a:visited {
+    color: purple; 
 }
     .nav li {
         float: left;
         margin-left: 20px;
     }
-    a:hover {
-        color: #B7E3DF;
-    }
 header img{
    width: 101.1%;
    margin-left:-10px;
 }
-aside{
+aside {
     display: inline-flex;
     height: 102px;
     align-items: center;
     background: #B7E3DF;
-    width: 101.1%;
-    margin-top:-5px ;
-    margin-left:-10px;
+    width: 100%;
+    margin-top: -10px;
+    position: relative; 
 }
 aside h1{
     color: #000;
     text-align: center;
-    font-family: Sansita Swashed;
+    font-family: "Sansita Swashed";
     font-size: 80px;
     font-weight: 400;
-    float:center ;
+    
     margin-left:400px;
     
 }
@@ -125,7 +189,7 @@ aside h1{
 #food2 h1{
     color: #000;
     text-align: center;
-    font-family: Satisfy;
+    font-family: "Satisfy";
     font-size: 60px;
     font-style: normal;
     font-weight: 400;
@@ -145,7 +209,7 @@ aside h1{
 #food3 h1{
     color: #000;
     text-align: center;
-    font-family: Satisfy;
+    font-family: "Satisfy";
     font-size: 60px;
     font-style: normal;
     font-weight: 400;
@@ -178,17 +242,17 @@ footer {
     margin-left:-10px;
 }
 
-#icons{
-    color:white;
+#icons {
+    color: white;
     text-decoration: none;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     align-items: center;
-    margin-left:-1100px;
+    margin-left: -1100px;
     font-size: 40px;
-    position: relative;
-    top:-310px;
+    position: relative; 
+    top: -280px;
 }
 #image{
     float:right;
@@ -199,4 +263,9 @@ footer p {
     margin-left:-300px;
     margin-top:-100px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+@media screen and (max-width: 600px) {
+  figcaption {
+    text-align: right; /* Right align for smaller screens */
+  }
 }
