--- a/css/contact.css
+++ b/css/contact.css
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Satisfy&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Sansita+Swashed&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Ruda&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
 *{
     margin:0;
     width:auto ;
@@ -58,15 +59,15 @@ aside{
 aside h1{
     color: #000;
     text-align: center;
-    font-family: Sansita Swashed;
+    font-family: 'Archivo Black', sans-serif;
     font-size: 80px;
     font-weight: 400;
     margin-left:600px;
+    text-transform: uppercase;
 }
 table {
     width: 25%;
     margin-left:200px;
-    margin-top:100px;
 }
 
 table, th, td {
@@ -81,7 +82,14 @@ th, td {
 th {
     width: 30%;
 }
+ tr:nth-child(even) {
+    background-color: #CFF;
+}
 
+/* Odd rows */
+tr:nth-child(odd) {
+    background-color: #FFF;
+}
 input[type="text"],
 input[type="tel"],
 textarea {
@@ -146,4 +154,10 @@ footer p {
     margin-left:-300px;
     margin-top:-140px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+fieldset{
+    width: 1200px;
+    height:400px ;
+    margin-left:100px;
+    margin-top:50px;
 }
