--- a/css/index.css
+++ b/css/index.css
@@ -55,6 +55,7 @@ header img{
     height: 140px;
     flex-direction: column;
     justify-content: center;
+   margin-right:-100px;
 }
     #welcome h1 {
     color: #000;
@@ -65,7 +66,7 @@ header img{
     font-weight: 400;
     line-height: normal;
     margin-top:20px;
-    margin-left:100px;
+    margin-left:300px;
     word-spacing: normal
 }
     #welcome p{
@@ -74,7 +75,7 @@ header img{
     font-style: normal;
     line-height: normal;
     font-family: 'Roboto Condensed', sans-serif;
-    margin-left:100px;
+    margin-left:300px;
     word-spacing: normal
 
 }
@@ -89,7 +90,7 @@ section{
     margin-left:200px
 }
 #backg img{
-width: 1519.5px;
+    width: 111%;
 margin-left:-200px;
 }
 aside{
@@ -108,13 +109,13 @@ aside h1{
     font-family: Sansita Swashed;
     font-size: 80px;
     font-weight: 400;
-    margin-left:400px;
+    margin-left:650px;
 }
     #marktal img{
     width: 500px;
     height: 399px;
     margin-top:-50px;
-    margin-left:30px;
+    margin-left:150px;
 }
     #marktal p{
     width: 860px;
@@ -125,7 +126,7 @@ aside h1{
     float:right;
     text-align:left ;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin-right:20px;
+    margin-right:300px;
 }
 #marktal h1{
     color: #000;
@@ -221,4 +222,14 @@ footer p {
     margin-left:-300px;
     margin-top:-260px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+#cookies-message {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #B7E3DF;
+    padding: 15px;
+    text-align: center;
+    z-index: 9999; /* Set the z-index value to 9999 */
 }
