--- a/css/contact.css
+++ b/css/contact.css
@@ -129,7 +129,7 @@ right:200px;
 }
 footer {
     background-color: #B7E3DF;
-    width: 1519px;
+    width:100%;
     height:460px;
     margin-top:130px ;
 }
