--- a/css/tourism.css
+++ b/css/tourism.css
@@ -157,9 +157,8 @@ margin-left:50px;
 
 footer {
     background-color: #B7E3DF;
-    width: 1519px;
+    width: 1900px;
     height:460px;
-    margin-top:-130px;
 }
 
 #icons{
@@ -169,18 +168,18 @@ footer {
     flex-direction: column;
     align-items: flex-start;
     align-items: center;
-    margin-left:-1100px;
     font-size: 40px;
+    right:300px;
     position: relative;
-    top:-280px;
 }
 #image{
     float:right;
-    margin-top:-605px;
+    margin-top:-340px;
 } 
 footer p {
     font-size:25px ;
-    margin-left:-300px;
+    margin-left:-450px;
     margin-top:-100px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
 }
